tests/fixtures/errors/box_bad_label.z
# box_bad_label.z -- the builtin Box (empty generic body) constructs only
# with 'from:'; any other value label is rejected rather than silently
# treated as the payload.
main: function is {
    b: Box val: 42
    print "\{b}"
}
